# temporal-payment-corridor-workshop

./: .casper.json  .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile.codec  Dockerfile.memory  Dockerfile.payments  Dockerfile.webui  Dockerfile.worker  LICENSE  Makefile  README.md  activities.py  agents.py  compose.dev.yaml  compose.yaml  memory.py  production-ready-checklist.md  pyproject.toml  simulator.py  test_webui.py  webui.py  worker.py  workflows.py
.claude/project-memory/: MEMORY.md
.claude/project-memory/references/: feedback_canonical_imports.md  feedback_code_comments.md  feedback_codec_server_not_a_feature.md  feedback_dev_workflow.md  feedback_docs_temporal_focus.md  feedback_english_only.md  feedback_git_commit_style.md  feedback_guide_screenshots.md  feedback_guide_ui_priority_naming.md  feedback_memory_present_tense.md  feedback_no_company_names.md  feedback_note_marker.md  feedback_ruff_line_length.md  feedback_slides_no_feature_tooling.md  feedback_slides_style_conventions.md  feedback_subagent_driven_default.md  feedback_temporal_cli_from_host.md  feedback_timeless_content.md  feedback_versioning_out_of_scope.md  project_all_features_test_contract.md  project_approval_demo_scenario.md  project_casper_port_remap.md  project_codespaces_integration.md  project_config_conventions.md  project_corridor_model_resolution.md  project_docker_build.md  project_domain_model_simplified.md  project_feature_regions_folding.md  project_gateway_payments_upstream.md  project_gateway_topology.md  project_implementation_status.md  project_module_layout.md  project_payments_component_naming.md  project_search_attributes_scope.md  project_workshop_audience.md  (+15 more)
.devcontainer/: devcontainer.json  setup.sh
.githooks/: pre-commit
.github/workflows/: ci.yml  links.yml
codec/: app.py  main.py  test_app.py
codec_server/: app.py  main.py  test_app.py
gateway/: Caddyfile
guide/: 00-application-overview.md  01-getting-started.md  02-durable-agents.md  03-human-approval-signal.md  04-approval-timeout.md  05-non-retryable-validation.md  06-retry-alerting.md  07-settlement-confirmation.md  08-search-attributes.md  09-payload-encryption.md  10-memory-workflow.md  11-observability.md  12-testing.md  13-wrap-up.md  README.md
guide/images/: README.md
memory/: app.py  main.py  store.py  test_app.py  test_store.py  test_workflow.py  workflow.py
payments/: activities.py  agents.py  api.py  main.py  main_api.py  main_worker.py  memory.py  test_agents.py  test_api.py  test_memory.py  test_replay.py  test_worker.py  test_workflows.py  worker.py  workflows.py
payments/testdata/: coordinator-history.json
shared/: encryption.py  models.py  test_encryption.py  test_models.py
simulator/: main.py  scenarios.py  test_scenarios.py
slides/: README.md  index.html  session-1.html  session-2.html  session-3.html
slides/assets/: deck.js  theme.css
templates/: index.html
tools/: capture_history.py  features.py  slides.py  test_features.py  test_guide.py
webui/: app.py  index.html  main.py  test_webui.py
webui/templates/: index.html
worker/: activities.py  agents.py  main.py  memory.py  test_replay.py  test_worker.py  test_workflows.py  worker.py  workflows.py
worker/testdata/: coordinator-history.json
(+3 files in other folders)
