[project]
name = "temporal-payment-corridor-workshop"
version = "0.1.0"
description = "Reference app and workshop: repairing anomalous cross-border payments with durable Temporal workflows and Pydantic AI agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=43",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "logfire[fastapi]>=4.37.0",
    "pydantic-ai[temporal]>=2.10.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
    "watchfiles>=1.2.0",
]

[project.scripts]
payments = "payments.main:dev"
simulator = "simulator.main:cli"
webui = "webui.main:dev"
memory = "memory.main:dev"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Package layout: ship each functional module as a package. Package data
# (webui templates/static) is picked up because it lives inside the webui
# package directory.
packages = ["shared", "payments", "webui", "simulator", "memory"]
