[project]
name = "temporal-payment-corridor-workshop"
version = "0.1.0"
description = "Reference app and workshop: repairing anomalous cross-border payments with durable Temporal workflows and Pydantic AI agents."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.13"
dependencies = [
    "cryptography>=49",
    "fastapi>=0.139.2",
    "httpx>=0.28.1",
    "logfire[fastapi]>=4.37.0",
    "pydantic-ai[temporal]>=2.11.0",
    "python-dotenv>=1.2.2",
    "uvicorn[standard]>=0.51.0",
    "watchfiles>=1.2.0",
]

[project.scripts]
payments = "payments.main_worker:dev"
payments-api = "payments.main_api:dev"
simulator = "simulator.main:cli"
memory = "memory.main:dev"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "ruff>=0.15.22",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
# Package layout: ship each functional module as a package.
packages = ["shared", "payments", "simulator", "memory"]
